# optika

./: Cargo.toml  README.md
src/lib/: constants.rs  lib.rs  optical_element.rs  optical_system.rs  ray.rs  utilities.rs
src/lib/materials/: mod.rs  surface_properties.rs  surface_properties_builder.rs
src/lib/shapes/: mod.rs  plane.rs  sphere.rs
