[package]
name = "optika"
version = "0.1.0"
edition = "2021"
description = "Non-sequential ray tracer for optical system design"
documentation = "https://docs.rs/crate/optika/latest"
readme = "README.md"
repository = "https://github.com/josh-read/optika/"
license = "MIT"
license-file = "LICENSE"
keywords = ["optical", "system", "design"]
categories = ["science", "command-line-utilities", "graphics"]

[dependencies]
nalgebra = "0.31.0"
approx = "0.5.1"

[lib]
name = "optika"
path = "src/lib/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"